# funkeykid

./: .dockerignore  .gitignore  DEPLOY.md  DEVELOPMENT.md  Dockerfile  FAQ.md  README.md  config.example.json  display.py  flake.nix  funkeykid.py  keyboard.py  pyproject.toml  rename_to-do.markdown  server.py  settings.json  version.py
.github/workflows/: build-and-push.yml
lang/: de-AT.json
scripts/: copy-sounds-from-library.sh  generate-missing-sounds.sh  regen_number_images.py  seed_numbers.py  seed_numbers_retry.py
static/: index.html
