[project]
name = "funkeykid"
version = "0.1.0"
description = "Educational keyboard toy — letter sounds, Pixoo display, TTS"
authors = [{ name = "Markus Barta", email = "markus@barta.com" }]
license = { text = "AGPL-3.0" }
requires-python = ">=3.11"

dependencies = [
    "evdev>=1.7.0",
    "paho-mqtt>=1.6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
funkeykid = "funkeykid:main"
